# spicy-curry

./: README.md
haskell/: README.md
haskell/.devcontainer/: devcontainer.json
haskell/lyah/: lyah.cabal
haskell/lyah/hof/: hof.hs
haskell/lyah/recursion/: qs.hs  recursion.hs
haskell/lyah/src/: Lyah.hs
haskell/lyah/src/Lyah/Hof/: Hof.hs
haskell/lyah/src/Lyah/InputOutput/: Randomness.hs
haskell/lyah/src/Lyah/ProblemSolving/: HeathrowLondon.hs  RPN.hs  RandomPaths.hs
haskell/lyah/src/Lyah/Recursion/: QuickSort.hs  Recurse.hs
haskell/lyah/src/Lyah/Types/: TypeFoo.hs
haskell/lyah/types-typeclasses/: TypeFoo.hs
haskell/misc/: Extract.hs  README.md  all_pairs.hs  btrees.hs  sql_parser.hs
haskell/misc/parsers/: parse.hs
lyah/: README.md
lyah/hof/: hof.hs
misc/: all_pairs.hs
