cabal-version:       2.4

name:                lyah
version:             0.1.0.0
license-file:        LICENSE
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
extra-source-files:  README.md

library
  exposed-modules:     
    Lyah,
    Lyah.Hof.Hof,
    Lyah.InputOutput.Randomness,
    Lyah.Recursion.QuickSort,
    Lyah.Recursion.Recurse,
    Lyah.Types.TypeFoo,
    Lyah.ProblemSolving.RPN,
    Lyah.ProblemSolving.HeathrowLondon,
    Lyah.ProblemSolving.RandomPaths
  other-modules:
  build-depends:       
    base ^>=4.13.0.0,
    random -any
  hs-source-dirs:
    src   
  default-language:    Haskell2010
